--- a/doc/tese/src/tex/references.bib
+++ b/doc/tese/src/tex/references.bib
@@ -627,6 +627,17 @@ Data},
   institution={AIR FORCE INST OF TECH WRIGHT-PATTERSON AFB OH}
 }
 
+@article{ehrgott2007bound,
+  title={Bound sets for biobjective combinatorial optimization problems},
+  author={Ehrgott, Matthias and Gandibleux, Xavier},
+  journal={Computers \& Operations Research},
+  volume={34},
+  number={9},
+  pages={2674--2694},
+  year={2007},
+  publisher={Elsevier}
+}
+
 %%%%%%%%%%%%%%%%%%
 %   M. Baroni    %
 %%%%%%%%%%%%%%%%%%
