--- a/doc/tese/src/tex/predefs.tex
+++ b/doc/tese/src/tex/predefs.tex
@@ -56,5 +56,9 @@
 \newcommand{\relkargsi}[3]{\relki{#1}\big(#2, #3\big)}
 \newcommand{\nrel}{p}
 
+\newcommand{\relI}{\rel_k^r}
+\newcommand{\relII}{\rel_k^{\dom}}
+\newcommand{\relIII}{\rel_k^{b}}
+
 % big bullet
 \newcommand{\bbt}{\,\begin{picture}(-1,1)(-1,-2)\circle*{5}\end{picture}\ }
