--- a/doc/tese/src/alg/baz-alg3.tex
+++ b/doc/tese/src/alg/baz-alg3.tex
@@ -3,13 +3,13 @@
       tal que $s_{k-1(i)} \geq_{lex} s_{k-1(j)} \; \forall i < j (1 \leq i, j \leq r)$}
     \State $C_k \gets \emptyset; M_k \gets \emptyset; i \gets 1; j \gets 1;$
     \While{$j \leq r$ \textbf{and} $s_{k-1(1)}^{\np+1} + \sum^n_{l=k}w_l \leq W$}
-      \State $j \gets j + 1$
+      \State $j \gets j + 1$;
     \EndWhile
     \While{$i \leq r$ \textbf{and} $s_{k-1(1)}^{\np+1} + w_k \leq W$}
       \State $s_k \gets (s_{k-1(1)}^1 + p_k^1,
         \ldots,
         s_{k-1(1)}^{\np} + p_k^{\np},
-        s_{k-1}^{\np+1} + w_k);$
+        s_{k-1(1)}^{\np+1} + w_k);$
       \While{$j \leq r$ \textbf{and} $s_{k-1(j)} \leq_{lex} s_k$}
         \State \texttt{MantainNonDominated($s_{k-1(j)}, M_k, C_k$)}; $j \gets j + 1;$
       \EndWhile
@@ -22,9 +22,10 @@
       \State $C_n \gets M_n$;
     \Else
       \State $F \gets \emptyset$;
-      \For{ ordenação $\ord \in \{\ord^{sum}, \ord^{max}\}$}
-        \For{$sw_k \in M_k$}
+      \For{ $\ord \in \{\ord^{sum}, \ord^{max}\}$}
+        \For{$s_k \in M_k$}
           \State Rerotular itens $k+1, \ldots, n$ segundo ordenação $\ord$;
+          \State $s_n \gets s_k$;
           \For{$j \gets k + 1, \ldots, n$}
             \If{$s_n^{\np+1} + w_j \leq W$}
               \State $s_n \gets (s_n^1 + p_j^1, \ldots, s_n^{\np} + p_j^{\np}, s_n^{\np+1} + w_j);$
@@ -33,18 +34,22 @@
           \State $F \gets \texttt{KeepNonDominated}(s_n, F)$;
         \EndFor
       \EndFor
-      \State $i \gets 1; remove \gets false$;
+      \State $i \gets 1; remove \gets true; F \gets \{s_{n(1)}, \ldots, s_{n(h)}\}$;
+      \While{$i \leq c$ \textbf{and} $remove$}
+        \State Computar limite superior $u$ para $s_{k(i)}$ conforme Equação~\ref{eq:upperb};
+        \State $j \gets 1; remove \gets false$;
+        \While{$j \leq h$ \textbf{and} $s_{n(j)} \dom_{lex} u$ \textbf{and} $\neg remove$}
+          \If{$s_{n(j)} \dom u$}
+            \State $remove \gets true$;
+          \Else
+            \State $j \gets j + 1$;
+          \EndIf
+        \EndWhile
+        \If{$remove$}
+          \State $C_k \gets C_k\backslash \{s_{k(i)}\}; i \gets i + 1$;
+        \EndIf
+      \EndWhile
     \EndIf
-    \While{$j \leq h$ \textbf{and} $s_{n(j)} \dom_{lex} u$ \textbf{and} $\neg remove$}
-      \If{$s_{n(j)} \dom u$}
-        \State $remove \gets true$;
-      \Else
-        \State $j \gets j + 1$;
-      \EndIf
-    \EndWhile
-    \If{$remove$}
-      \State $C_k \gets C_k\backslash \{s_{k(i)}\}; i \gets i + 1$;
-    \EndIf
-  \State \Return $C_k$
+  \State \Return $C_k$;
   \EndFunction
 \end{algorithmic}
