--- a/doc/tese/src/alg/dp1.tex
+++ b/doc/tese/src/alg/dp1.tex
@@ -1,11 +1,11 @@
-\begin{algorithmic}[1] % The number tells where the line numbering should start
-    \Function{DP}{$\bsym{p}, \bsym{w}, W$}
-    \State $S^0 = \big\{\emptyset\big\}$
-    \For{$k \gets 1, n$}
-      \State $S_*^k = S^{k-1} \cup \{\sol{x} \cup k \:|\: \sol{x} \in S^{k-1}\}$
-      \State {TODO...}
-    \EndFor
-  \State $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dom{a}{x} \;|\; \weight{x} \leq W \}$
-  \State \Return $P$
-  \EndFunction
-\end{algorithmic}
+\Kw{$\bsym{p}, \bsym{w}, W$}
+\Begin{
+  \SetAlgoLined
+  $S^0 = \big\{\emptyset\big\}$\;
+  \For{$k \gets 1, n$}{
+    $S_*^k = S^{k-1} \cup \{\sol{x} \cup k \:|\: \sol{x} \in S^{k-1}\}$\;
+    TODO...\;
+  }
+  $P = \{\sol{x} \:|\: \nexists \sol{a} \in S^n: \dom{a}{x} \;|\; \weight{x} \leq W \}$\;
+  \textbf{return} $P$\;
+}
