--- a/doc/tese/src/tex/03-kdtree.tex
+++ b/doc/tese/src/tex/03-kdtree.tex
@@ -67,7 +67,7 @@ Cada ponto indexado pela árvore subdivide o espaço em dois de acordo
 com o valor da componente que está sendo indexada.
 A subdivisão do espaço é representada na figura por uma linha mais grossa.
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[scale=4.8]{img/kdt/dom-kd}
   \caption{Exemplo de pontos indexados por uma \kdtree{}.}
@@ -82,7 +82,7 @@ avaliadas.
 
 \missing{Propor passo-a-passo da operação.}
 
-\begin{figure}[H]
+\begin{figure}
   \centering
   \includegraphics[scale=1.7]{img/kdt/query}
   \caption{Exemplo de operação de verificação de dominância utilizando a \kdtree{}.}
