--- a/doc/tese/src/tex/main.tex
+++ b/doc/tese/src/tex/main.tex
@@ -25,7 +25,10 @@ brazil,				% o último idioma é o principal do documento
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{algpseudocode}
-\usepackage{algorithm}
+%\usepackage{algorithm}
+\usepackage[ruled, vlined, linesnumbered]{algorithm2e}
+
+\SetKwInput{Kw}{input}
 
 \usepackage{graphicx}			% Inclusão de gráficos
 \usepackage{subcaption}
